--- a/templates/TemplateFront.html.twig
+++ b/templates/TemplateFront.html.twig
@@ -24,6 +24,8 @@
     <!-- main css -->
     <link rel="stylesheet" href="{{ asset('front/css/style.css') }}">
     <link rel="stylesheet" href="{{ asset('front/css/responsive.css') }}">
+    <link rel="stylesheet" href="{{ asset('styles/style.css') }}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     {% endblock %}
 </head>
 <body>
@@ -197,6 +199,9 @@
 <script src="{{ asset('front/vendors/counter-up/jquery.counterup.js') }}"></script>
 <script src="{{ asset('front/js/mail-script.js') }}"></script>
 <script src="{{ asset('front/js/theme.js') }}"></script>
+<script src="{{ asset('styles/script.js') }}"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 {% endblock %}
 </body>
 </html>
