--- a/templates/event/_form.html.twig
+++ b/templates/event/_form.html.twig
@@ -8,11 +8,12 @@
         </div>
     </div>
 
-    {{ form_start(form) }}
+    {{ form_start(form,{attr:{novalidate:'novalidate'}})  }}
     <div class="form-group row">
         <label class="col-sm-12 col-md-2 col-form-label">Nom evenement</label>
         <div class="col-sm-12 col-md-10">
             {{ form_widget(form.nom_event,{'attr': {'placeholder':'Nom event','class':'form-control'}}) }}
+            {{ form_errors(form.nom_event,{'attr': {'class':'text-danger'}}) }}
         </div>
     </div>
 
@@ -20,35 +21,40 @@
         <label class="col-sm-12 col-md-2 col-form-label">Theme</label>
         <div class="col-sm-12 col-md-10">
             {{ form_widget(form.event_theme,{'attr': {'placeholder':'Event theme','class':'form-control'}}) }}
+            {{ form_errors(form.event_theme,{'attr': {'class':'text-danger'}}) }}
         </div>
     </div>
 
     <div class="form-group row">
         <label class="col-sm-12 col-md-2 col-form-label">Date debut</label>
         <div class="col-sm-12 col-md-10">
-            {{ form_widget(form.date_debut,{'attr': {'placeholder':'Date debut'}}) }}
+            {{ form_widget(form.date_debut,{'attr': {'placeholder':'Date debut','class':'form-control'}}) }}
+            {{ form_errors(form.date_debut,{'attr': {'class':'text-danger'}}) }}
         </div>
     </div>
 
     <div class="form-group row">
         <label class="col-sm-12 col-md-2 col-form-label">Date fin</label>
         <div class="col-sm-12 col-md-10">
-            {{ form_widget(form.date_fin,{'attr': {'placeholder':'Date fin'}}) }}
+            {{ form_widget(form.date_fin,{'attr': {'placeholder':'Date fin','class':'form-control'}}) }}
+            {{ form_errors(form.date_fin,{'attr': {'class':'text-danger'}}) }}
+
         </div>
     </div>
 
     <div class="form-group row">
         <label class="col-sm-12 col-md-2 col-form-label">Status</label>
         <div class="col-sm-12 col-md-10">
-            {{ form_widget(form.event_status,{'attr': {'placeholder':'Event status','class':'form-control'}}) }}
+            {{ form_widget(form.event_status,{'attr': {'placeholder':'Event status','class':'d-flex align-content-around flex-wrap'}}) }}
+            {{ form_errors(form.event_status,{'attr': {'class':'text-danger'}}) }}
         </div>
     </div>
-
 
     <div class="form-group row">
         <label class="col-sm-12 col-md-2 col-form-label">Nombre de participants</label>
         <div class="col-sm-12 col-md-10">
             {{ form_widget(form.nbr_participants,{'attr': {'placeholder':'Nombre de participants','class':'form-control'}}) }}
+            {{ form_errors(form.nbr_participants,{'attr': {'class':'text-danger'}}) }}
         </div>
     </div>
 
@@ -56,6 +62,7 @@
         <label class="col-sm-12 col-md-2 col-form-label">Lieu</label>
         <div class="col-sm-12 col-md-10">
             {{ form_widget(form.lieu,{'attr': {'placeholder':'Lieu','class':'form-control'}}) }}
+            {{ form_errors(form.lieu,{'attr': {'class':'text-danger'}}) }}
         </div>
     </div>
 
@@ -70,6 +77,7 @@
         <label class="col-sm-12 col-md-2 col-form-label">Client</label>
         <div class="col-sm-12 col-md-10">
             {{ form_widget(form.id_client,{'attr': {'placeholder':'client','class':'form-control'}}) }}
+            {{ form_errors(form.id_client,{'attr': {'class':'text-danger'}}) }}
         </div>
     </div>
 
@@ -78,6 +86,7 @@
         <label class="col-sm-12 col-md-2 col-form-label">Type de l'evenement </label>
         <div class="col-sm-12 col-md-10">
             {{ form_widget(form.id_type,{'attr': {'placeholder':'type','class':'form-control'}}) }}
+            {{ form_errors(form.id_type,{'attr': {'class':'text-danger'}}) }}
         </div>
     </div>
 
@@ -86,6 +95,7 @@
         <label class="col-sm-12 col-md-2 col-form-label">Description</label>
         <div class="col-sm-12 col-md-10">
             {{ form_widget(form.event_description,{'attr': {'placeholder':'Description','class':'form-control'}}) }}
+            {{ form_errors(form.event_description,{'attr': {'class':'text-danger'}}) }}
         </div>
     </div>
 
