--- a/templates/TemplateDashboard.html.twig
+++ b/templates/TemplateDashboard.html.twig
@@ -269,16 +269,17 @@
             <ul id="accordion-menu">
                 <li class="dropdown">
                     <a href="javascript:;" class="dropdown-toggle">
-                        <span class="micon dw dw-house-1"></span><span class="mtext">Home</span>
+                        <span class="micon dw dw-calendar"></span><span class="mtext">Gestion Evenement</span>
                     </a>
                     <ul class="submenu">
-                        <li><a href="index.html">Dashboard style 1</a></li>
-                        <li><a href="index2.html">Dashboard style 2</a></li>
+                        <li><a href="{{ path('app_event_listedemande') }}">Liste Demandes</a></li>
+                        <li><a href="{{ path('app_event_index') }}">Liste Evenements</a></li>
+                        <li><a href="{{ path('app_event_type_index') }}">Types Evenements</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="javascript:;" class="dropdown-toggle">
-                        <span class="micon dw dw-calendar1"></span><span class="mtext">Forms</span>
+                        <span class="micon dw dw-user"></span><span class="mtext">Users</span>
                     </a>
                     <ul class="submenu">
                         <li><a href="form-basic.html">Form Basic</a></li>
