--- a/templates/TemplateFront.html.twig
+++ b/templates/TemplateFront.html.twig
@@ -18,14 +18,28 @@
     <link rel="stylesheet" href="{{ asset('front/css/font-awesome.min.css') }}">
     <link rel="stylesheet" href="{{ asset('front/vendors/owl-carousel/owl.carousel.min.css') }}">
     <link rel="stylesheet" href="{{ asset('front/vendors/lightbox/simpleLightbox.css') }}">
+        <!--
     <link rel="stylesheet" href="{{ asset('front/vendors/nice-select/css/nice-select.css') }}">
+    -->
     <link rel="stylesheet" href="{{ asset('front/vendors/animate-css/animate.css') }}">
     <link rel="stylesheet" href="{{ asset('front/vendors/popup/magnific-popup.css') }}">
     <!-- main css -->
     <link rel="stylesheet" href="{{ asset('front/css/style.css') }}">
     <link rel="stylesheet" href="{{ asset('front/css/responsive.css') }}">
-    <link rel="stylesheet" href="{{ asset('styles/style.css') }}">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
+        <!-- Icons font CSS-->
+        <link href="{{ asset('styles/vendor/mdi-font/css/material-design-iconic-font.min.css') }}" rel="stylesheet" media="all">
+        <link href="{{ asset('styles/vendor/font-awesome-4.7/css/font-awesome.min.css') }}" rel="stylesheet" media="all">
+        <!-- Font special for pages-->
+        <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+        <!-- Vendor CSS-->
+        <link href="{{ asset('styles/vendor/select2/select2.min.css') }}" rel="stylesheet" media="all">
+        <link href="{{ asset('styles/vendor/datepicker/daterangepicker.css') }}" rel="stylesheet" media="all">
+
+        <!-- Main CSS-->
+        <link href="{{ asset('styles/css/main.css') }}" rel="stylesheet" media="all">
+        <link href="{{ asset('validator/notification.css') }}" rel="stylesheet" media="all">
     {% endblock %}
 </head>
 <body>
@@ -61,13 +75,13 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav ml-auto">
-                        <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="{{ path('app_event_listeevents') }}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
                         <li class="nav-item submenu dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Evenements</a>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a class="nav-link" href="courses.html">Courses</a>
-                                <li class="nav-item"><a class="nav-link" href="course-details.html">Course Details</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{{ path('app_event_reserver') }}">Reserver</a>
+                                <li class="nav-item"><a class="nav-link" href="{{ path('app_event_monreservation') }}">Mes Reservations</a></li>
                             </ul>
                         </li>
                         <li class="nav-item submenu dropdown">
@@ -189,7 +203,9 @@
 <script src="{{ asset('front/js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('front/js/stellar.js') }}"></script>
 <script src="{{ asset('front/vendors/lightbox/simpleLightbox.min.js') }}"></script>
+    <!--
 <script src="{{ asset('front/vendors/nice-select/js/jquery.nice-select.min.js') }}"></script>
+-->
 <script src="{{ asset('front/vendors/isotope/imagesloaded.pkgd.min.js') }}"></script>
 <script src="{{ asset('front/vendors/isotope/isotope.pkgd.min.js') }}"></script>
 <script src="{{ asset('front/vendors/owl-carousel/owl.carousel.min.js') }}"></script>
@@ -199,9 +215,17 @@
 <script src="{{ asset('front/vendors/counter-up/jquery.counterup.js') }}"></script>
 <script src="{{ asset('front/js/mail-script.js') }}"></script>
 <script src="{{ asset('front/js/theme.js') }}"></script>
-<script src="{{ asset('styles/script.js') }}"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
+    <script src="{{ asset('validator/controleSaisie.js') }}"></script>
+    <!-- Jquery JS-->
+    <script src="{{ asset('styles/vendor/jquery/jquery.min.js') }}"></script>
+    <!-- Vendor JS-->
+    <script src="{{ asset('styles/vendor/select2/select2.min.js') }}"></script>
+    <script src="{{ asset('styles/vendor/datepicker/moment.min.js') }}"></script>
+    <script src="{{ asset('styles/vendor/datepicker/daterangepicker.js') }}"></script>
+
+    <!-- Main JS-->
+    <script src="{{ asset('styles/js/globals.js') }}"></script>
+
 {% endblock %}
 </body>
 </html>
