--- a/templates/TemplateDashboard.html.twig
+++ b/templates/TemplateDashboard.html.twig
@@ -40,6 +40,7 @@
 
 </head>
 <body>
+<!--
 <div class="pre-loader">
     <div class="pre-loader-box">
         <div class="loader-logo"><img src="{{ asset('dashboard/vendors/images/deskapp-logo.svg') }}" alt=""></div>
@@ -52,7 +53,7 @@
         </div>
     </div>
 </div>
-
+ -->
 <div class="header">
     <div class="header-left">
         <div class="menu-icon dw dw-menu"></div>
@@ -271,8 +272,8 @@
                         <span class="micon dw dw-house-1"></span><span class="mtext">Home</span>
                     </a>
                     <ul class="submenu">
-                        <li><a href="index.html">Dashboard style 1</a></li>
-                        <li><a href="index2.html">Dashboard style 2</a></li>
+                        <li><a href="{{ path('app_type_comptabilite_index') }}">Type Comptabilite</a></li>
+                        <li><a href="{{ path('app_comptabilite_index') }}">Comptabilite</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
