--- a/templates/TemplateDashboard.html.twig
+++ b/templates/TemplateDashboard.html.twig
@@ -315,6 +315,7 @@
 <script src="{{ asset('dashboard/src/plugins/datatables/js/dataTables.responsive.min.js') }}"></script>
 <script src="{{ asset('dashboard/src/plugins/datatables/js/responsive.bootstrap4.min.js') }}"></script>
 <script src="{{ asset('dashboard/vendors/scripts/dashboard.js') }}"></script>
+<script src="{{ asset('validator/validback.js') }}"></script>
     <script src="{{ asset('dashboard/src/plugins/dropzone/src/dropzone.js') }}"></script>
     <script>
         Dropzone.autoDiscover = false;
