--- a/templates/event/events.html.twig
+++ b/templates/event/events.html.twig
@@ -10,7 +10,26 @@
                 <h2>Evenement Puplique</h2>
                 <p>There is a moment in the life of any aspiring astronomer that it is time to buy that first telescope. It’s exciting to think about setting up your own viewing station.</p>
             </div>
-            <div class="row courses_inner">
+            <div class="d-flex justify-content-between bd-highlight mb-3">
+                <div class="p-2 bd-highlight">
+
+                </div>
+                <div class="p-2 bd-highlight">
+                    <div class="input-group">
+
+                        <div class="js-select-simple select--no-search" >
+                            <select name="event_type" id="date" onchange="actiontrie()"  style="width: 220px">
+                                <option disabled="disabled" selected="selected">Tri par date</option>
+                                <option value="ASC">Ascendant</option>
+                                <option value="DESC">Descendant</option>
+
+                            </select>
+                            <div class="select-dropdown"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row courses_inner" id="show">
                 <div class="col-lg-12">
                     <div class="grid_inner">
                         {% for event in events %}
@@ -29,9 +48,23 @@
                             </div>
                         </div>
                         {% endfor %}
-                </div>
+                    </div>
 
-            </div>
+                </div>
         </div>
-    </section>
+    </div>
+</section>
+<script>
+    function actiontrie(){
+        var sch=$("#date").val();
+        $.ajax({
+            url: "{{ path('tridatedebut') }}",
+            data:{date: sch},
+            type: "POST",
+            success: function(data){
+                $('#show').html(data).show();
+            }
+        });
+    }
+</script>
 {% endblock %}
