--- a/templates/event_type/_form.html.twig
+++ b/templates/event_type/_form.html.twig
@@ -14,8 +14,8 @@
                 {{ form_widget(form.libelle,{'attr': {'placeholder':'Libelle','id':'libelle','class':'form-control'}}) }}
                 <span class="" id="spanerror" >
                     <span class="d-block">
-                        <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
-                        <span class="form-error-message">Le Champ libelle est obligatoire !</span>
+                        <span id="labelerror" class=""></span>
+                        <span id="texterror" class="form-error-message"></span>
                 </span>
                 </span>
             </div>
