--- a/templates/TemplateFront.html.twig
+++ b/templates/TemplateFront.html.twig
@@ -40,6 +40,11 @@
         <!-- Main CSS-->
         <link href="{{ asset('styles/css/main.css') }}" rel="stylesheet" media="all">
         <link href="{{ asset('validator/notification.css') }}" rel="stylesheet" media="all">
+
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
     {% endblock %}
 </head>
 <body>
